--- a/index.html
+++ b/index.html
@@ -1,23 +1,69 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="./css/reset.css">
-  <link rel="stylesheet" type="text/css" href="./css/style.css">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Document</title>
+<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="./css/reset.css">
+<link rel="stylesheet" type="text/css" href="./css/responsive.css">
+<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
     <header>
-        <div class="container"></div>
+        <div class="container">
+            <div class="header flex">
+                <h1 class="logo"></h1>
+                <nav class="snav">
+                    <a href="" class="snav__list"></a>
+                    <a href="" class="snav__list"></a>
+                    <a href="" class="snav__list"></a>
+                </nav>
+            </div>
+        </div>
     </header>
-    <div class="main">
-            <div class="container"></div>
-    </div>
+    <main class="main">
+        <section class="sec__one">
+            <div class="container">
+                <div class="content">
+                    <div class="content__ttl fview__ttl"></div>
+                    <div class="content__message fview__message"></div>
+                    <div class="content__btn fview__btn"></div>
+                </div>
+                <div class="slide__btn">
+                    <div class="slide__btn--one"></div>
+                    <div class="slide__btn--two"></div>
+                    <div class="slide__btn--three"></div>
+                </div>
+            </div>
+        </section>
+        <section class="sec__two">
+            <div class="container">
+                <div class="sec__ttl"></div>
+                <div class="contents">
+                    <div class="content">
+                        <div class="content__ttl act__ttl"></div>
+                        <div class="content__message act__message"></div>
+                        <div class="content__btn act__btn"></div>
+                    </div>
+                    <img class="content__img" src="./img/top1.png" alt="コンテンツ画像XX">
+                </div>
+            </div>
+        </section>
+        <section class="sec__three">
+            <div class="container">
+                <p>test</p>
+            </div>
+        </section>
+        <section class="sec__four">
+            <div class="container">
+                <p>test</p>
+            </div>
+        </section>
+    </main>
     <footer>
         <div class="container"></div>
     </footer>
-    
 </body>
 </html>
