スライド準備中

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Document</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<!-- <script type="text/javascript" src="./script/jquery.bgswitcher.js"></script> -->
 <script type="text/javascript" src="./script/script.js"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 <link rel="stylesheet" type="text/css" href="./css/reset.css">
@@ -32,7 +33,7 @@
         </nav>
     </header>
     <main class="main">
-        <section class="sec__one">
+        <section class="sec__one bg-slider page-one">
             <div class="container">
                 <div class="content">
                     <h2 class="content__ttl fview__ttl">We value customers <br>more than anyone.</h2>
@@ -41,8 +42,46 @@
                 </div>
             </div>
         </section>
-        <div class="sec__one--responsive">
+        <div class="sec__one--responsive page-oneres">
             <img class="bkgimg__responsive" src="./img/top1.png" alt="">
+            <div class="container">
+                <div class="content--responsive">
+                    <h2 class="content__ttl fview__ttl">We value customers <br>more than anyone.</h2>
+                    <h3 class="content__message fview__message">We’re a creative digital marketing company that <br>helps you bring better results.</h3>
+                    <p class="content__btn fview__btn content__btn--responsive">MORE</p>
+                </div>
+            </div>
+        </div>
+        <section class="sec__one bg-slider page-two">
+            <div class="container">
+                <div class="content">
+                    <h2 class="content__ttl fview__ttl">We value customers <br>more than anyone.</h2>
+                    <h3 class="content__message fview__message">We’re a creative digital marketing company that <br>helps you bring better results.</h3>
+                    <p class="content__btn fview__btn">MORE</p>
+                </div>
+            </div>
+        </section>
+        <div class="sec__one--responsive page-twores">
+            <img class="bkgimg__responsive" src="./img/top2.png" alt="">
+            <div class="container">
+                <div class="content--responsive">
+                    <h2 class="content__ttl fview__ttl">We value customers <br>more than anyone.</h2>
+                    <h3 class="content__message fview__message">We’re a creative digital marketing company that <br>helps you bring better results.</h3>
+                    <p class="content__btn fview__btn content__btn--responsive">MORE</p>
+                </div>
+            </div>
+        </div>
+        <section class="sec__one bg-slider page-three">
+            <div class="container">
+                <div class="content">
+                    <h2 class="content__ttl fview__ttl">We value customers <br>more than anyone.</h2>
+                    <h3 class="content__message fview__message">We’re a creative digital marketing company that <br>helps you bring better results.</h3>
+                    <p class="content__btn fview__btn">MORE</p>
+                </div>
+            </div>
+        </section>
+        <div class="sec__one--responsive page-threeres">
+            <img class="bkgimg__responsive" src="./img/top3.png" alt="">
             <div class="container">
                 <div class="content--responsive">
                     <h2 class="content__ttl fview__ttl">We value customers <br>more than anyone.</h2>
